--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,17 @@
 #calculator table td {
     border-spacing: 3px;
 }
+
+input.display {
+    width: 166px;
+    text-align: right;
+}
+
+td.buttons {
+    border-top: solid 1px silver;
+}
+
+input[type=button] {
+    width: 40px;
+    height: 30px;
+}
